fix:fixed margin on small height screens

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -45,6 +45,10 @@
   display: block;
   width: fit-content;
 }
+.home-content-text {
+  height: fit-content;
+  padding-bottom: 3rem;
+}
 
 @media (max-width: 1200px) {
   .home-container {
